--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react-dom": "^16.5.1",
+    "react-route": "^1.0.3",
     "react-scripts": "1.1.5"
   },
   "scripts": {
